--- a/assets/taksathi_panel/asset/style/admin-panel.css
+++ b/assets/taksathi_panel/asset/style/admin-panel.css
@@ -524,7 +524,7 @@ select {
 }
 
 .add-btn button {
-    width: 270px;
+    width: 80%;
     height: 60px;
     display: block;
     margin: auto;
@@ -557,6 +557,15 @@ select {
 }
 
 .top-table {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    border-bottom: 5px solid #707070;
+    margin: auto;
+    margin-top: 2%;
+}
+
+.top-table2 {
     display: flex;
     justify-content: space-evenly;
     width: 80%;
@@ -923,12 +932,13 @@ select {
 }
 
 .close-icon {
-    /* width: 45px; */
-    height: 45px;
+    width: 30px;
+    height: 30px;
     display: block;
     background-image: url(../icons/icon-29.png);
     background-repeat: no-repeat;
-    /* margin-top: 45px; */
+    background-size: contain;
+    margin-top: 20px;
     /* margin-right: 45px; */
     cursor: pointer;
 }
@@ -1128,6 +1138,7 @@ select {
     font-size: 24px;
     color: #707070;
     width: 50%;
+    text-align: center !important;
     display: block;
 }
 
@@ -1240,6 +1251,13 @@ select {
 }
 
 @media screen and (max-width: 768px) {
+    .chart-txt {
+        /* margin: auto !important; */
+        font-size: 11px;
+        color: #707070;
+        width: 75%;
+        display: block;
+    }
     .accounting-page-tablet {
         display: block;
     }
@@ -1417,6 +1435,13 @@ select {
 }
 
 @media (min-width: 300px) and (max-width: 450px) {
+    .chart-txt {
+        /* margin: auto !important; */
+        font-size: 11px;
+        color: #707070;
+        width: 75%;
+        display: block;
+    }
     .name-complaintbox p {
         font-size: 9px;
     }
@@ -1773,6 +1798,7 @@ select {
     height: 500px !important;
     justify-content: center;
     /* display: none; */
+    border-radius: 10px;
     overflow-y: scroll;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
@@ -1788,6 +1814,7 @@ select {
 .top-page-box {
     width: 45%;
     margin: auto;
+    text-align: end;
 }
 
 .ui-received-chat {
@@ -1803,7 +1830,8 @@ select {
     height: 60px;
     border-radius: 40%;
     background-image: url(../../../Derakhti/asset/icons/icons8-support-64.png);
-    background-repeat: round;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .chat-sender-profile {
@@ -1812,12 +1840,13 @@ select {
     border-radius: 40%;
     background-image: url(../../../Derakhti/asset/icons/icon-21.png);
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .chat-text-box {
     background-color: rgba(21, 93, 235, 0.801);
     width: 80%;
-    height: 200px;
+    /* height: 200px; */
     margin-left: 15px;
     border-radius: 52px;
     margin-top: 25px;
@@ -1826,7 +1855,7 @@ select {
 
 .ui-send-chat {
     direction: rtl;
-    width: 60%;
+    /* width: 60%; */
     display: flex;
     margin-top: 25px;
 }
@@ -1835,9 +1864,9 @@ select {
     margin-top: 25px;
     background-color: rgba(246, 38, 1, 0.801);
     width: 80%;
-    height: 200px;
+    height: auto;
     margin: auto;
-    margin-left: 15px;
+    /* margin-left: 15px; */
     border-radius: 52px;
 }
 
@@ -1861,8 +1890,9 @@ select {
     width: 100%;
     height: 38px;
     background-image: url(../icons/icons8-email-send-48.png);
-    background-repeat: round;
+    background-repeat: no-repeat;
     transform: rotate(225deg);
+    background-size: contain;
 }
 
 .send-file {
@@ -1888,7 +1918,20 @@ select {
 
 .message-date {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row-reverse;
+    /* margin: auto; */
+    margin: 15px 35px;
+    font-size: 10px;
+    color: black;
+}
+
+.message-date2 {
+    display: flex;
+    flex-direction: row-reverse;
+    /* margin: auto; */
+    margin: 15px 35px;
+    font-size: 10px;
+    color: black;
 }
 
 .link-icon {
@@ -1904,7 +1947,7 @@ select {
 }
 
 .upload-inp {
-    width: 5%;
+    width: 10%;
     border: none;
     cursor: pointer;
     height: 35px;
@@ -1950,7 +1993,7 @@ select {
         border-radius: 20px;
     }
     .link-icon {
-        background-image: url(../icons/icons8-link-24.png);
+        /* background-image: url(../icons/icons8-link-24.png); */
         background-repeat: no-repeat;
         width: 40px;
         margin: auto;
@@ -1970,4 +2013,22 @@ select {
 
 #parent-div {
     display: none;
+}
+
+.teket-header-div {
+    display: flex;
+    align-items: center;
+}
+
+.teket-header-div p {
+    margin-right: 0px;
+    font-size: 14px;
+}
+
+.teket-header-content {
+    font-size: 12px !important;
+}
+
+.services-panel-title p {
+    direction: rtl !important;
 }
