--- a/assets/taksathi_panel/asset/style/admin-panel.css
+++ b/assets/taksathi_panel/asset/style/admin-panel.css
@@ -1920,16 +1920,20 @@ select {
     display: flex;
     flex-direction: row-reverse;
     /* margin: auto; */
-    margin: 15px 35px;
+    margin: 15px 12px;
     font-size: 10px;
     color: black;
+}
+
+#teket-tabel {
+    font-size: 12px;
 }
 
 .message-date2 {
     display: flex;
     flex-direction: row-reverse;
     /* margin: auto; */
-    margin: 15px 35px;
+    margin: 15px 12px;
     font-size: 10px;
     color: black;
 }
